add new global css variables

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -77,6 +77,10 @@
   --duration-long: 0.5s;
   --duration-extra-long: 0.7s;
 
+  // Dialog Sizes
+  --dialog-base: 20rem;
+  --dialog-medium: 30rem;
+
   // Breakpoints
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
