--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -22,6 +22,8 @@
 
   --error-base: #800000;
 
+  --secondary-text: #a47f1a;
+
   /* Gradient-speficic values */
 
   // For gradient primary
@@ -60,6 +62,8 @@
   --primary-hover: #2b2121;
 
   --error-base: #b43a3a;
+
+  --secondary-text: #cc9d1b;
 
   /* Gradient-speficic values */
 
