enhance time selection dialog

--- a/frontend/src/app/shared/time-selection-dialog/time-selection-dialog.component.html
+++ b/frontend/src/app/shared/time-selection-dialog/time-selection-dialog.component.html
@@ -1,7 +1,8 @@
 <div class="material-dialog-container">
   <!--Dialog Title-->
   <h2 mat-dialog-title class="dialog-title">
-    <mat-icon>schedule</mat-icon>Select Time
+    <span mat-symbol="schedule"></span>
+    <span id="title_text">Select Time</span>
   </h2>
   <!--Dialog fields-->
   <mat-dialog-content>
