--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -148,7 +148,7 @@
 
                 Switch Theme
               </span>
-              <span class="dropdown-item logout">
+              <span class="dropdown-item logout"  (click)="logout()">
                 <span mat-symbol="logout"></span>
                 Logout
               </span>
