add global scss variables

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -23,6 +23,7 @@
   --error-base: #800000;
 
   --secondary-text: #a47f1a;
+  --secondary-hover: #a47f1a0b;
 
   /* Gradient-speficic values */
 
@@ -64,6 +65,7 @@
   --error-base: #b43a3a;
 
   --secondary-text: #cc9d1b;
+  --secondary-hover: #cc9d1b08;
 
   /* Gradient-speficic values */
 
