refine superadmin main component

--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -98,7 +98,8 @@ mat-sidenav-content {
     $justify: none,
     $gap: var(--spacing-md)
   );
-  padding: var(--spacing-xl);
+  padding: var(--spacing-2xl);
+  height: 100%;
 
   .main-toolbar {
     position: sticky;
