add crud operation for room in frontend

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
             <span mat-symbol="person" class="input-icon"></span>
             <input
               type="text"
-              placeholder="Faculty Code"
+              placeholder="Code"
               class="login-input"
               id="code"
               formControlName="code"
