use the new generic table component

--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
@@ -11,12 +11,12 @@
 
   <!--Common Table-->
   <div class="programs-table-container">
-    <app-common-table
+    <app-table-generic
       [columns]="columns"
       [data]="programs"
       [displayedColumns]="displayedColumns"
       (edit)="openEditProgramDialog($event)"
       (delete)="deleteProgram($event)"
-    ></app-common-table>
+    ></app-table-generic>
   </div>
 </div>
