remove mat ripple from navbar

--- a/frontend/src/app/core/components/faculty/main/main.component.html
+++ b/frontend/src/app/core/components/faculty/main/main.component.html
@@ -15,13 +15,13 @@
 
     <nav class="header-navbar">
       <div class="slider"></div>
-      <a matRipple routerLink="home" routerLinkActive="active">
+      <a routerLink="home" routerLinkActive="active">
         <span mat-symbol="home"></span>Home
       </a>
-      <a matRipple routerLink="preferences" routerLinkActive="active">
+      <a routerLink="preferences" routerLinkActive="active">
         <span mat-symbol="settings"></span>Set Preferences
       </a>
-      <a matRipple routerLink="load-and-schedule" routerLinkActive="active">
+      <a routerLink="load-and-schedule" routerLinkActive="active">
         <span mat-symbol="calendar_month"></span>Load and Schedule
       </a>
     </nav>
