--- a/frontend/src/app/shared/table-generic/table-generic.component.html
+++ b/frontend/src/app/shared/table-generic/table-generic.component.html
@@ -1,3 +1,13 @@
+<!-- Table Heading -->
+@if (showTableHeading) {
+<div class="table-heading">
+  <h3>{{ tableHeadingTitle }}</h3>
+  <button mat-button color="primary" (click)="onTableHeadingButtonClick()">
+    {{ tableHeadingButtonText }}
+  </button>
+</div>
+}
+
 <div class="table-container">
   <!--Material Table-->
   <table mat-table [dataSource]="dataSource" matSort class="custom-table">
@@ -8,7 +18,8 @@
         mat-header-cell
         *matHeaderCellDef
         mat-sort-header
-        class="custom-header"
+        class="custom-header common"
+        [ngClass]="{ 'sticky': isHeaderSticky, 'top-left-radius': isFirstColumn(column.key) }"
       >
         {{ column.label }}
       </th>
@@ -24,7 +35,7 @@
 
     <!-- Actions column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef class="custom-header">Actions</th>
+      <th mat-header-cell *matHeaderCellDef class="custom-header action" [ngClass]="{ 'sticky': isHeaderSticky }">Actions</th>
       <td mat-cell *matCellDef="let element" class="custom-cell action-cell">
         <div class="action-buttons">
           <!-- Optionally shows 'View' button-->
