--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -1,5 +1,18 @@
 @import "../../../styles/mixins.scss";
 
+.table-heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+
+  h3 {
+    font-weight: 500;
+    margin: 0;
+  }
+}
+
 .table-container {
   @include hide-scrollbar;
   display: flex;
@@ -9,6 +22,7 @@
   max-height: 50rem;
 
   .custom-table {
+    @include default-transition;
     background-color: var(--neutral-light);
     border-radius: var(--border-radius-md);
   }
@@ -20,9 +34,19 @@
     font-weight: 500;
     text-align: center;
 
-    position: sticky;
-    top: 0;
-    z-index: 2;
+    &.sticky {
+      position: sticky;
+      top: 0;
+      z-index: 2;
+    }
+
+    &.action {
+      border-top-right-radius: var(--border-radius-md);
+    }
+
+    &.top-left-radius {
+      border-top-left-radius: var(--border-radius-md);
+    }
   }
 
   .custom-cell {
@@ -55,6 +79,7 @@
   }
 
   .custom-table-paginator {
+    @include default-transition;
     padding: var(--spacing-md);
     background-color: var(--neutral-light);
     border-radius: 0 0 var(--border-radius-md) var(--border-radius-md);
