sue the new search template

--- a/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/rooms/rooms.component.html
@@ -1,12 +1,12 @@
 <div class="rooms-container">
-
   <!--Table Header-->
   <div class="rooms-header-container">
     <app-table-header
-      [searchLabel]="'Search Rooms'"
+      [inputFields]="headerInputFields"
       [addButtonLabel]="'Add Room'"
-      (search)="onSearch($event)"
+      (inputChange)="onInputChange($event)"
       (add)="openAddRoomDialog()"
+      (export)="onExport()"
     ></app-table-header>
   </div>
 
