--- a/frontend/src/app/core/components/superadmin/main/main.component.html
+++ b/frontend/src/app/core/components/superadmin/main/main.component.html
@@ -36,11 +36,21 @@
 
       <div class="group">
         <h4 class="list-subheader">Management</h4>
-        <a mat-list-item class="list-item">
+        <a 
+          mat-list-item 
+          class="list-item"
+          routerLink="/superadmin/admin"
+          routerLinkActive="active-link"
+        >
           <span mat-symbol="admin_panel_settings" matListItemIcon></span>
           <span matListItemTitle>Manage Admin</span>
         </a>
-        <a mat-list-item class="list-item">
+        <a 
+          mat-list-item 
+          class="list-item"
+          routerLink="/superadmin/faculty"
+          routerLinkActive="active-link"
+        >
           <span mat-symbol="groups" matListItemIcon></span>
           <span matListItemTitle>Manage Faculty</span>
         </a>
