--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -1,15 +1,17 @@
 @import "../../../styles/mixins.scss";
 
 .table-heading {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  @include flex-layout($align: center, $justify: space-between);
   margin-bottom: 1rem;
 
-  h3 {
+  .heading-title {
+    color: var(--primary-one);
     font-weight: 500;
     margin: 0;
+  }
+
+  .heading-button {
+    color: var(--primary-text);
   }
 }
 
