--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -12,8 +12,8 @@
   --neutral-option: #a2a2a230;
   --neutral-bar: #d7d7d7;
   --neutral-sidebar: #f0f0f0;
-  --neutral-button: #474747;
---neutral-button-lighter: #474747;
+  --neutral-button: #535353;
+  --neutral-button-lighter: #474747;
 
   /* Primary colors variations */
   --primary-one: #800000;
@@ -57,7 +57,7 @@
   --neutral-bar: #323232;
   --neutral-sidebar: #181818;
   --neutral-button: #3a3a3a;
-  --neutral-button-lighter: #919191;
+  --neutral-button-lighter: #afafaf;
 
   /* Primary colors variations */
   --primary-one: #a93232;
