--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -104,7 +104,7 @@ mat-sidenav-content {
   .main-toolbar {
     position: sticky;
     top: 0;
-    z-index: 3;
+    z-index: 4;
     background: none;
     padding: 0;
 
@@ -209,6 +209,7 @@ mat-sidenav-content {
   }
 
   .sidenav-main {
+    @include hide-scrollbar;
     height: inherit;
     overflow: auto;
   }
