remove export options from programs

--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.html
@@ -4,10 +4,9 @@
     <app-table-header
       [inputFields]="headerInputFields"
       [addButtonLabel]="'Add Program'"
-      [showExportDialog]="true"
       (inputChange)="onInputChange($event)"
       (add)="openAddProgramDialog()"
-      (export)="onExport($event)"
+      (export)="onExport()"
     ></app-table-header>
   </div>
 
